TestWebKit/paginate.css
*
{
!-webkit-touch-callout: none;
!-webkit-user-select: none;
-webkit-tap-highlight-color: rgba(0,0,0,0);
-webkit-hyphens: auto;
-webkit-hyphenate-locale: "ru_RU";
-webkit-locale: "ru_RU";

}

html
{
margin:0;
padding:0;
-webkit-column-rule-width: 0px; /* should be defined to prevent browser from change real column width */
-webkit-column-gap: 0px; /* should be defined to prevent browser from change real column width */

overflow-x: scroll; /* show scroller */
overflow-y: hidden;

}

body { margin: 0; } /* remove extra spaces */

img 
{ 
-webkit-column-break-before : auto;
-webkit-column-break-after : always ;
-webkit-column-span: all;
}

